# backpack-example

./: README.md  backpack-example.cabal  cabal.project  default.nix  flake.nix  nixpkgs.json
app/: Main.hs  app.cabal
src-models/: Models.hs  models.cabal
src-prod-impl/: Prod.hs  prod-impl.cabal
src-test-impl/: Test.hs  test-impl.cabal
src-usecases/: Sig.hsig  UseCases.hs  usecases.cabal
