cabal-version:      3.0
name:               backpack-example
version:            0.1.0.0

executable example
  build-depends:
    base,
    text,
    transformers,
    models,
    test-impl,
    prod-impl,
    usecases
  main-is:          Main.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  mixins:
    usecases(UseCases as UseCasesProd) requires (Sig as Prod),
    usecases(UseCases as UseCasesTest) requires (Sig as Test)
